# birdex-api

./: .gitignore  1_stop_service.sh  2_confirm_stop.sh  3_start_service.sh  Dockerfile  docker-compose.yml  pom.xml  readme.md  readme.txt  task-def.json  task-definition-debug.json
.github/workflows/: deploy.yml
birdnet-service/: .env  pyproject.toml  requirements.txt  server.py
src/main/java/com/birdex/: BirdexApplication.java  ModelProcessor.java
src/main/java/com/birdex/client/: AudioAIModelClient.java
src/main/java/com/birdex/config/: BirdnetProperties.java  BucketProperties.java  JacksonConstraintsConfig.java  OpenApiConfig.java  SecurityConfig.java  WebClientConfig.java
src/main/java/com/birdex/controller/: AchievementController.java  AdminController.java  AudioController.java  AuthController.java  BirdController.java  BirdProfileController.java  FileController.java  HealthController.java  MissionController.java  MockController.java  ReportController.java  SightingController.java  TestController.java  UserController.java  VisualAnalysisController.java
src/main/java/com/birdex/domain/: ActionReportRequest.java  AnalyzedAudioResponse.java  AuthRequest.java  AuthResponse.java  BirdDetectRequest.java  BirdDetectResponse.java  Detection.java  (+15 more)
src/main/resources/: application.properties  application.yml  birdex_clases.json  birdex_worker_image.py  birdex_worker_video.py  birdex_worker_video_multipart.py  test_predict_stdin.py  test_predict_video_stdin.py
src/main/resources/scripts/: bird_insert.sql
src/test/java/com/birdex/: BirdexApplicationTests.java
(+89 files in other folders)
